# setuptools-rust-bundled

./: .gitignore  README.md  channel-rust-stable.toml  pyproject.toml  setup.py
.github/workflows/: package.yml
example/: lib.rs  pyproject.toml
example/example/: __init__.py
examples/maturin/: Cargo.toml  pyproject.toml
examples/setuptools/: pyproject.toml
setuptools_rust_bundled/: __init__.py  maturin.py
